[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://africaCircle.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 3.13312

[node name="Player" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.26235, 2.26235 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 0.48594, 0.48594 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 13.4998, 13.4998 )
shape = SubResource( 2 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 19
one_shot = true
explosiveness = 0.89
emission_shape = 1
emission_sphere_radius = 9.82
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 283.83
angle_random = 1.0
scale_amount = 4.0

[connection signal="input_event" from="." to="." method="_on_Player_input_event"]
